question html pages work now, tests pass

--- a/schoolhub/lib/schoolhub_web/templates/question/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/form.html.eex
@@ -5,6 +5,8 @@
     </div>
   <% end %>
 
+  <%= hidden_input f, :course_id, value: @course_id %>
+
   <%= label f, :content %>
   <%= textarea f, :content %>
   <%= error_tag f, :content %>
@@ -12,10 +14,6 @@
   <%= label f, :tags %>
   <%= multiple_select f, :tags, ["Option 1": "option1", "Option 2": "option2"] %>
   <%= error_tag f, :tags %>
-
-  <%= label f, :pinned %>
-  <%= checkbox f, :pinned %>
-  <%= error_tag f, :pinned %>
 
   <div>
     <%= submit "Save" %>
