--- a/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
@@ -1,11 +1,16 @@
-<h1>Listing Questions</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>Listing Questions</h2>
+
+<span><%= link "New Question", to: Routes.course_question_path(@conn, :new, @course_id) %></span>
+<span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
 
 <table>
   <thead>
     <tr>
       <th>Content</th>
+      <th>Author</th>
       <th>Tags</th>
-      <th>Pinned</th>
+      <th></th>
 
       <th></th>
     </tr>
@@ -13,18 +18,22 @@
   <tbody>
 <%= for question <- @questions do %>
     <tr>
-      <td><%= question.content %></td>
+      <td><%= question.content |> SchoolhubWeb.Gettext.first_line() %></td>
+      <td><%= Schoolhub.Courses.get_username!(question.creator, @course_id) %></td>
       <td><%= question.tags %></td>
-      <td><%= question.pinned %></td>
+      <td><%= if question.pinned, do: "pinned" %></td>
 
       <td>
-        <span><%= link "Show", to: Routes.question_path(@conn, :show, question) %></span>
-        <span><%= link "Edit", to: Routes.question_path(@conn, :edit, question) %></span>
-        <span><%= link "Delete", to: Routes.question_path(@conn, :delete, question), method: :delete, data: [confirm: "Are you sure?"] %></span>
+        <span><%= link "Show", to: Routes.course_question_path(@conn, :show, @course_id, question) %></span>
+        <span><%= link "Edit", to: Routes.course_question_path(@conn, :edit, @course_id, question) %></span>
+	<span><%= if question.pinned, do:
+		  (link "Unpin", to: Routes.course_question_question_path(@conn, :pin, @course_id, question, [to_pin: false]), method: :put),
+		  else:
+		  (link "Pin", to: Routes.course_question_question_path(@conn, :pin, @course_id, question, [to_pin: true]), method: :put)
+		  %></span>
+        <span><%= link "Delete", to: Routes.course_question_path(@conn, :delete, @course_id, question), method: :delete, data: [confirm: "Are you sure?"] %></span>
       </td>
     </tr>
 <% end %>
   </tbody>
 </table>
-
-<span><%= link "New Question", to: Routes.question_path(@conn, :new) %></span>
