--- a/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
@@ -2,6 +2,7 @@
 
 <span><%= link "View Members", to: Routes.course_affiliation_path(@conn, :index, @course.id) %></span>
 <span><%= link "View Posts", to: Routes.course_post_path(@conn, :index, @course.id) %></span>
+<span><%= link "View Questions", to: Routes.course_question_path(@conn, :index, @course.id) %></span>
 <span><%= link "Chat", to: Routes.course_chat_path(@conn, :index, @course.id) %></span>
 <span><%= link "Files", to: Routes.course_file_path(@conn, :index, @course.id) %></span>
 <span><%= link "Edit", to: Routes.course_path(@conn, :edit, @course) %></span>
