--- a/schoolhub/lib/schoolhub_web/templates/question/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/new.html.eex
@@ -1,5 +1,6 @@
-<h1>New Question</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>New Question</h2>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.question_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_question_path(@conn, :create, @course_id)) %>
 
-<span><%= link "Back", to: Routes.question_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_question_path(@conn, :index, @course_id) %></span>
