--- a/schoolhub/lib/schoolhub_web/templates/qreply/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/qreply/new.html.eex
@@ -1,5 +1,6 @@
-<h1>New Qreply</h1>
+<h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
+<h2>New Reply</h2>
 
-<%= render "form.html", Map.put(assigns, :action, Routes.qreply_path(@conn, :create)) %>
+<%= render "form.html", Map.put(assigns, :action, Routes.course_question_qreply_path(@conn, :create, @course_id, @question_id)) %>
 
-<span><%= link "Back", to: Routes.qreply_path(@conn, :index) %></span>
+<span><%= link "Back", to: Routes.course_question_qreply_path(@conn, :index, @course_id, @question_id) %></span>
