--- a/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
@@ -14,6 +14,7 @@
       <th>Content</th>
       <th>Author</th>
       <th>Tags</th>
+      <th>Replies</th>
       <th></th>
 
       <th></th>
@@ -25,6 +26,7 @@
       <td><%= question.content |> SchoolhubWeb.Gettext.first_line() %></td>
       <td><%= Schoolhub.Courses.get_username!(question.creator, @course_id) %></td>
       <td><%= question.tags %></td>
+      <td><%= Enum.count(question.qreply) %></td>
       <td><%= if question.pinned, do: "pinned" %></td>
 
       <td>
