--- a/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
@@ -27,3 +27,6 @@
 
 <span><%= link "Edit", to: Routes.course_question_path(@conn, :edit, @course_id, @question) %></span>
 <span><%= link "Back", to: Routes.course_question_path(@conn, :index, @course_id) %></span>
+
+<%= render SchoolhubWeb.QreplyView, "index.html",
+    conn: @conn, course_id: @course_id, question_id: @question.id, question_replies: @qreplies %>
