adding hints to html textfields

--- a/schoolhub/lib/schoolhub_web/templates/post/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/post/form.html.eex
@@ -8,7 +8,7 @@
   <%= hidden_input f, :course_id, value: @course_id %>
 
   <%= label f, :content %>
-  <%= textarea f, :content %>
+  <%= textarea f, :content, placeholder: "Text renders in markdown" %>
   <%= error_tag f, :content %>
 
   <div>
