--- a/schoolhub/lib/schoolhub_web/templates/reply/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/reply/form.html.eex
@@ -6,7 +6,7 @@
   <% end %>
 
   <%= label f, :content %>
-  <%= textarea f, :content %>
+  <%= textarea f, :content, placeholder: "Text renders in markdown" %>
   <%= error_tag f, :content %>
 
   <div>
