--- a/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
@@ -1,6 +1,11 @@
 <h1><%= link Schoolhub.Courses.get_course!(@course_id).name, to: Routes.course_path(@conn, :show, @course_id) %></h1>
 <h2>Listing Questions</h2>
 
+<div id="filter">
+  <input type="search" id="filter_field" name="filter_field" placeholder="Separate multiple tags by spaces" value="<%= render_tag(@filters) %>">
+  <button type="button" id="filter_button" name="filter_button">Filter</button>
+</div>
+
 <span><%= link "New Question", to: Routes.course_question_path(@conn, :new, @course_id) %></span>
 <%= if @question_limit !== -1 do %>
 <span><%= link "More", to: Routes.course_question_path(@conn, :index, @course_id,
