--- a/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/show.html.eex
@@ -19,6 +19,11 @@
   </li>
 
   <li>
+    <strong>Follows:</strong>
+    <%= Schoolhub.Questions.get_follows_number(@question.id) %>
+  </li>
+
+  <li>
     <strong>Pinned:</strong>
     <%= @question.pinned %>
   </li>
