--- a/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/question/index.html.eex
@@ -3,6 +3,7 @@
 
 <div id="filter">
   <input type="search" id="filter_field" name="filter_field" placeholder="Separate multiple tags by spaces" value="<%= render_tag(@filters) %>">
+  <input type="checkbox" id="only_following" name="only_following" <%= @only_following %>>
   <input type="hidden" id="course_id" name="course_id" value="<%= @course_id %>">
   <input type="button" onclick="filter()" value="Filter">
 </div>
@@ -10,7 +11,7 @@
 <span><%= link "New Question", to: Routes.course_question_path(@conn, :new, @course_id) %></span>
 <%= if @question_limit !== -1 do %>
 <span><%= link "More", to: Routes.course_question_path(@conn, :index, @course_id,
-	  [limit: String.to_integer(@question_limit) + 5]) %></span>
+	  [limit: String.to_integer(@question_limit) + 5, only_following: @only_following]) %></span>
 <% end %>
 <span><%= link "Back", to: Routes.course_path(@conn, :show, @course_id) %></span>
 
@@ -67,10 +68,24 @@
       var filter_text = document.getElementById("filter_field").value;
       var filter_checked = (filter_text === "") ? " " : filter_text;
       var filter_param = filter_checked.replace(/ /g, "@");
+      var only_following = get_following_param();
       
-      var url_course = window.location.origin.concat("/courses/").concat(course_id);
-      var url = url_course.concat("/questions/filters/").concat(filter_param);
+      var url = window.location.origin
+	  .concat("/courses/")
+	  .concat(course_id)
+	  .concat("/questions/filters/")
+	  .concat(filter_param)
+	  .concat(only_following);
       
       window.location.href = url;
-  }
+  };
+
+  function get_following_param() {
+      var only_following_bool = document.getElementById("only_following").checked;
+      
+      if (only_following_bool)
+	  return "/only_following";
+      else
+	  return "/all";
+  };
 </script>
