implement join with token, without tests

--- a/schoolhub/lib/schoolhub_web/templates/page/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/page/index.html.eex
@@ -9,6 +9,9 @@
     <%= link "Courses", to: Routes.course_path(@conn, :index) %>
   </li>
   <li>
+    <%= link "Join course with token", to: Routes.token_path(@conn, :new) %>
+  </li>
+  <li>
     <%= link "Users", to: Routes.user_path(@conn, :index) %>
   </li>
   <li>
