--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -7,14 +7,14 @@
 <input type="hidden" id="domain" name="domain" value="10.3.2.1">
 
 <%= form_for @conn, Routes.session_path(@conn, :create), [method: :post], fn _ -> %>
-  <div class="form-group">
+  <div>
     <input type="button" id="login_button" name="login_button" value="Login">  
   </div>
 <% end %>
 
 <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete], fn _ -> %>
-  <div class="form-group">
-    <%= submit "logout" %>
+  <div>
+    <%= submit "Logout" %>
   </div>
 <% end %>
 
