temporary solution for deleting user with dependencies

--- a/schoolhub/lib/schoolhub_web/templates/user/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/user/form.html.eex
@@ -20,7 +20,7 @@
       <%= error_tag cf, :username %>
 
       <%= label cf, :password %>
-      <%= text_input cf, :password %>
+      <%= password_input cf, :password %>
       <%= error_tag cf, :password %>
     <% end %>
   </div>
