--- a/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/session/new.html.eex
@@ -4,7 +4,7 @@
 <input type="password" id="password" name="password" placeholder="Password">
 <input type="hidden" id="xmpp_url" name="xmpp_url"
        value="<%= get_protocol() <> "://" <>  get_domain() <> ":" <> get_port() <> "/ws-xmpp" %>">
-<input type="hidden" id="domain" name="domain" value="10.3.2.1">
+<input type="hidden" id="domain" name="domain" value="mongooseim-1">
 
 <span><%= link "Forgot password", to: Routes.session_path(@conn, :forgot_pw) %></span>
 
