--- a/schoolhub/lib/schoolhub_web/templates/course/index.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/index.html.eex
@@ -7,6 +7,7 @@
   <thead>
     <tr>
       <th>Name</th>
+      <th></th>
 
       <th></th>
     </tr>
@@ -15,6 +16,7 @@
 <%= for course <- @courses do %>
     <tr>
       <td><%= course.name %></td>
+      <td><%= if course.active == false, do: "< disabled >" %></td>
 
       <td>
         <span><%= link "Show", to: Routes.course_path(@conn, :show, course) %></span>
