--- a/schoolhub/lib/schoolhub_web/templates/user/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/user/show.html.eex
@@ -24,5 +24,13 @@
 
 </ul>
 
+<%= if @logout_button do%>
+  <%= form_for @conn, Routes.session_path(@conn, :delete), [method: :delete], fn _ -> %>
+    <div>
+      <%= submit "Logout" %>
+    </div>
+  <% end %>
+<% end %>
+
 <span><%= link "Edit", to: Routes.user_path(@conn, :edit, @user) %></span>
 <span><%= link "Back", to: Routes.user_path(@conn, :index) %></span>
