--- a/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/layout/app.html.eex
@@ -14,7 +14,7 @@
       <section class="container">
         <nav role="navigation">
           <ul>
-            <li><a href="<%= Routes.session_path(@conn, :new) %>">Session</a></li>
+            <li><a href="<%= get_session_url(@conn) %>"><%= get_session_link_text(@conn) %></a></li>
             <%= if function_exported?(Routes, :live_dashboard_path, 2) do %>
               <li><%= link "LiveDashboard", to: Routes.live_dashboard_path(@conn, :home) %></li>
             <% end %>
