--- a/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
@@ -1,4 +1,4 @@
-<%= form_for @changeset, @action, fn f -> %>
+<%= form_for @changeset, @action, [multipart: true], fn f -> %>
   <%= if @changeset.action do %>
     <div class="alert alert-danger">
       <p>Oops, something went wrong! Please check the errors below.</p>
@@ -10,9 +10,14 @@
   <%= error_tag f, :name %>
 
   <%= label f, :description %>
-  (Write text in markdown to render)
+  (Write text in markdown to render)<br/>
   <%= textarea f, :description %>
   <%= error_tag f, :description %>
+
+  <%= label f, :picture %>
+  (Displayed as foreground header)<br/>
+  <%= file_input f, :picture %>
+  <%= error_tag f, :picture %>
 
   <div>
     <%= submit "Save" %>
