only accept pictures as course picture extensions

--- a/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/form.html.eex
@@ -16,7 +16,7 @@
 
   <%= label f, :picture %>
   (Displayed as foreground header)<br/>
-  <%= file_input f, :picture %>
+  <%= file_input f, :picture, accept: ".jpg,.png,.gif" %>
   <%= error_tag f, :picture %>
 
   <div>
