--- a/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
+++ b/schoolhub/lib/schoolhub_web/templates/course/show.html.eex
@@ -16,4 +16,8 @@
 	  %></span>
 <span><%= link "Back", to: Routes.course_path(@conn, :index) %></span>
 
+<%= if @course.picture != nil do %>
+  <br/><img src="<%= render_picture_source(@course.picture) %>"><br/>
+<% end %>
+
 <%= @course.description |> Earmark.as_html!() |> raw() %>
